--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port= 8081
-myvar=test123
+mqSelector=emx
 emx.mq.url= tcp://localhost:61616
 emx.mq.queue= demo-one
 amh.mq.url= tcp://localhost:61616
-amh.mq.queue= standalone.queue
+amh.mq.queue= demo-two
