listen to multiple queues from single source

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port= 8081
 mqSelector=emx
 emx.mq.url= tcp://localhost:61616
-emx.mq.queue= demo-one
+emx.mq.queue= demo-one,demo-two
 amh.mq.url= tcp://localhost:61616
 amh.mq.queue= demo-two
