Multiple sources added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 server.port= 8081
 mqSelector=emx
+
 emx.mq.url= tcp://localhost:61616
-emx.mq.queue= demo-one,demo-two
-amh.mq.url= tcp://localhost:61616
-amh.mq.queue= demo-two
+#Colon : is a separator used separate queue names
+emx.mq.queue= emx.queue1:emx.queue2
+
+amh.mq.url= tcp://localhost:61617
+amh.mq.queue= amh.queue1:amh.queue2:amh.queue3
